--- a/NurseryPolije/app/src/main/res/layout/activity_keranjang.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_keranjang.xml
@@ -28,10 +28,21 @@
                 android:orientation="vertical"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:listitem="@layout/item_list_keranjang"/>
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:listitem="@layout/item_list_keranjang" />
+
+            <TextView
+                android:id="@+id/keteranganKeranjang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Anda Belum Memasukan Barang Ke Dalam Keranjang"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
