--- a/NurseryPolije/app/src/main/res/layout/activity_kritik.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_kritik.xml
@@ -36,24 +36,24 @@
     <Button
         android:id="@+id/Batal"
         style="@style/loginButton"
-        android:layout_width="124dp"
-        android:layout_height="36dp"
+        android:layout_width="98dp"
+        android:layout_height="23dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="65dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginBottom="133dp"
         android:background="@drawable/kembali"
         android:text="Batal" />
 
     <Button
         android:id="@+id/Kir"
         style="@style/loginButton"
-        android:layout_width="124dp"
-        android:layout_height="36dp"
+        android:layout_width="90dp"
+        android:layout_height="27dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="65dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="129dp"
         android:background="@drawable/kembali"
         android:text="Kirim" />
 
@@ -76,17 +76,19 @@
         android:textSize="26dp"
         android:text="Kritik Dan Saran" />
 
-    <TextView
+    <EditText
         android:id="@+id/kritik"
-        android:background="@drawable/border_kritik"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="200dp"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="50dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="50dp"
-        android:hint="isikan kritik dan saran anda  disini" />
+        android:layout_marginBottom="201dp"
+        android:background="@drawable/border_kritik"
+        android:ems="10"
+        android:inputType="textPersonName"
+         />
+
+    />
 
 </RelativeLayout>
