--- a/NurseryPolije/app/src/main/res/layout/activity_kritik.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_kritik.xml
@@ -36,12 +36,12 @@
     <Button
         android:id="@+id/Batal"
         style="@style/loginButton"
-        android:layout_width="98dp"
-        android:layout_height="23dp"
+        android:layout_width="90dp"
+        android:layout_height="27dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="70dp"
-        android:layout_marginBottom="133dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="129dp"
         android:background="@drawable/kembali"
         android:text="Batal" />
 
@@ -52,7 +52,7 @@
         android:layout_height="27dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="65dp"
+        android:layout_marginLeft="50dp"
         android:layout_marginBottom="129dp"
         android:background="@drawable/kembali"
         android:text="Kirim" />
@@ -82,12 +82,85 @@
         android:layout_height="100dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginBottom="201dp"
         android:background="@drawable/border_kritik"
         android:ems="10"
         android:inputType="textPersonName"
          />
+
+    <TextView
+        android:id="@+id/tulis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="320dp"
+        android:textColor="@color/biru"
+        android:textSize="20dp"
+        android:text="Kritik dan Saran" />
+
+    <TextView
+        android:id="@+id/tls1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="200dp"
+        android:textColor="@color/primaryTextColor"
+        android:textSize="20dp"
+        android:text="Berikan Kritik dan Saran Kepada Kami Tentang:" />
+
+    <TextView
+        android:id="@+id/tls2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="260dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="40dp"
+        android:textColor="@color/biru"
+        android:textSize="15dp"
+        android:text="1. Permasalahan selama menggunakan aplikasi ini" />
+
+    <TextView
+        android:id="@+id/tls3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/biru"
+        android:textSize="15dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="300dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="40dp"
+        android:text="2. Kekurangan aplikasi ini" />
+
+    <TextView
+        android:id="@+id/tls4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="320dp"
+        android:textSize="15dp"
+        android:textColor="@color/biru"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="40dp"
+        android:text="3. Tampilan aplikasi ini" />
+
+    <TextView
+        android:id="@+id/tls5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="340dp"
+        android:layout_marginLeft="40dp"
+        android:textColor="@color/biru"
+        android:textSize="15dp"
+        android:text="4. Dsb" />
+
 
     />
 
