--- a/NurseryPolije/app/src/main/res/layout/activity_keranjang.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_keranjang.xml
@@ -6,25 +6,62 @@
     android:layout_height="match_parent"
     tools:context=".KeranjangActivity">
 
-    <ScrollView
-        android:id="@+id/scrollView"
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:paddingBottom="80dp"
+        android:layout_height="50dp"
+        android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        >
+        android:background="@drawable/login_shape_bk">
+
+        <TextView
+            android:id="@+id/tvJudul"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Keranjang anda"
+            android:textStyle="bold"
+            android:textColor="@color/putih"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textSize="18dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="585dp"
+        android:paddingBottom="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/keteranganKeranjang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Anda Belum Memasukan Barang Ke Dalam Keranjang"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvkeranjang"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="533dp"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
@@ -34,18 +71,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:listitem="@layout/item_list_keranjang" />
 
-            <TextView
-                android:id="@+id/keteranganKeranjang"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Anda Belum Memasukan Barang Ke Dalam Keranjang"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     </ScrollView>
@@ -53,29 +79,34 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/aksi"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:background="@color/primaryTextColor"
+        android:layout_height="70dp"
+        android:background="@drawable/check_shape_bk"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
             android:id="@+id/btnKembaliKeranjang"
+            android:background="@drawable/button"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btnCheckOutKeranjang"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="38dp"
             android:text="Kembali"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnCheckOutKeranjang"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/btnCheckOutKeranjang"
+            android:background="@drawable/button"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/btnKembaliKeranjang"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="38dp"
             android:text="Check Out"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btnKembaliKeranjang"
+            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints" />
 
 
