--- a/NurseryPolije/app/src/main/res/layout/item_list_keranjang.xml
+++ b/NurseryPolije/app/src/main/res/layout/item_list_keranjang.xml
@@ -13,7 +13,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp">
+        android:layout_height="90dp"
+        android:background="@drawable/itemkeranjang">
 
         <ImageView
             android:id="@+id/ivBungaKeranjang"
@@ -43,6 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
@@ -51,8 +53,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:text="@tools:sample/lorem/random"
-                tools:ignore="MissingConstraints" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints"
+                tools:text="@tools:sample/lorem/random" />
 
             <TextView
                 android:id="@+id/tvTotalHargaKeranjang"
@@ -69,7 +72,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvJumlahBeliKeranjang"
+                app:layout_constraintTop_toBottomOf="@+id/tvNamaBungaKeranjang"
                 app:layout_constraintVertical_bias="0.0"
                 tools:text="@tools:sample/lorem/random" />
 
